updates to leads dark mode+fix

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --ic-purple: #7b444e;
     --ic-red: #ac4c29;
     --ic-orange: #ff7a1b;
-    --leads-section-theme: #fafafa;
+    --leads-section-theme: #121212;
 }
 
 
@@ -689,21 +689,22 @@ ic blue
     position: absolute;
     top: 0%;
     left: 50%;
-    transform: translate(-50%,-25%);
+    transform: translate(-50%,11%);
     z-index: 10;
 
-    width: 100%;
-    height: 100%;
+    width: 270px;
+    height: 270px;
 
     opacity: 0;
     transition: inherit;
-
+    border-radius: 100%;
 }
 
 .slick-current .lead-person h1:hover {
     opacity: 1;
     background-color: rgba(255, 255, 255, 0.3); 
     cursor: pointer;
+
 }
 
 .lead-person h3 {
